scrollbar-fix2

--- a/app/components/Wallet/ReceiveModal.scss
+++ b/app/components/Wallet/ReceiveModal.scss
@@ -106,7 +106,7 @@
 
       .data {
         flex: 9;
-        overflow-x: scroll;
+        overflow-y: auto;
       }
 
       .copy {
