--- a/app/routes/app/components/App.scss
+++ b/app/routes/app/components/App.scss
@@ -5,7 +5,7 @@
 	width: 80%;
 	display: inline-block;
 	vertical-align: top;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .titleBar {
